--- a/src/styles/PopupAddTask.css
+++ b/src/styles/PopupAddTask.css
@@ -1,4 +1,4 @@
-.popup{
+.popupAddTask{
     display: flex;
     width: 100%;
     height: 100%;
@@ -9,13 +9,13 @@
     z-index: 2;
 }
 
-.popup-container{
+.popupAddTask-container{
     display: block;
     width: 100%;
     height: 100%;
 }
 
-.popup-body{
+.popupAddTask-body{
     width: 500px;
     margin: 10% 33.333%;
     background-color: #fff;
@@ -25,7 +25,7 @@
     border-radius: 10px;
 }
 
-.popup-body a{
+.popupAddTask-body a{
     position: absolute;
     top: 15px;
     right: 15px;
@@ -34,31 +34,31 @@
     cursor: pointer;
 }
 
-.popup-body div{
+.popupAddTask-body div{
     margin: 20px;
     
 }
 
-.popup-body div input{
+.popupAddTask-body div input{
     width: 230px;
     height: 50px;
     font-size: 18px;
     border-radius: 10px;
 }
 
-.popup-body div input::placeholder{
+.popupAddTask-body div input::placeholder{
     font-size: 18px;
     text-indent: 15px;
 }
 
-.popup-body div p{
+.popupAddTask-body div p{
     padding: 0;
     margin: 0;
     font-weight: 600;
     font-size: 18px;
 }
 
-.popup-body button{
+.popupAddTask-body button{
     width: 240px;
     background-color: blue;
     height: 50px;
