--- a/src/styles/PopupRemoveTask.css
+++ b/src/styles/PopupRemoveTask.css
@@ -1,4 +1,4 @@
-.popupRemoveColumn{
+.popupRemoveTask{
     display: flex;
     width: 100%;
     height: 100%;
@@ -9,13 +9,13 @@
     z-index: 2;
 }
 
-.popupRemoveColumn-container{
+.popupRemoveTask-container{
     display: block;
     width: 100%;
     height: 100%;
 }
 
-.popupRemoveColumn-body{
+.popupRemoveTask-body{
     width: 500px;
     margin: 10% 33.333%;
     background-color: #fff;
@@ -25,12 +25,12 @@
     border-radius: 10px;
 }
 
-.popupRemoveColumn-body p {
+.popupRemoveTask-body p {
     font-size: 25px;
     margin: 20px;
 }
 
-.popupRemoveColumn-body button {
+.popupRemoveTask-body button {
     width: 150px;
     height: 50px;
     border-radius: 10px;
@@ -40,7 +40,3 @@
     margin: 5px;
     background-color: blue;
 }
-
-
-
-
