--- a/src/styles/ColumnTitle.css
+++ b/src/styles/ColumnTitle.css
@@ -1,7 +1,6 @@
 .taskTitle {
     display: flex;
     margin: 5px;
-    justify-content: center;
     align-items: center;
 }
 
@@ -14,8 +13,8 @@
     flex-grow: 1;
 }
 
-.taskTitle .buttonAdd {
-    width: 80px;
+.taskTitle button {
+    width: 70px;
     height: 50px;
     border-radius: 5px;
     background-color: rgb(7, 163, 7);
@@ -30,8 +29,26 @@
     right: 5px;
     top: 5px;
     font-weight: 600;
-    border: 1px solid black;
     padding: 2px;
     cursor: pointer;
     border-radius: 5px;
+}
+
+.taskTitle .inputChangeTitle {
+    height: 46px;
+    width: 220px;
+    font-family: cursive;
+    font-size: 1.17em;
+    font-weight: bold;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    margin: 0px;
+}
+
+.taskTitle .buttonChange {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    margin: 0px;
 }
