--- a/src/styles/ColumnTitle.css
+++ b/src/styles/ColumnTitle.css
@@ -6,10 +6,7 @@
 
 .taskTitle h3 {
     font-family: cursive;
-    word-break: break-all;
-}
-
-.taskTitle div {
+    overflow-wrap: break-word;
     flex-grow: 1;
 }
 
@@ -35,8 +32,8 @@
 }
 
 .taskTitle .inputChangeTitle {
-    height: 46px;
-    width: 220px;
+    height: 45px;
+    width: 230px;
     font-family: cursive;
     font-size: 1.17em;
     font-weight: bold;
@@ -46,6 +43,7 @@
 }
 
 .taskTitle .buttonChange {
+    height: 45px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     border-top-left-radius: 0px;
