--- a/src/styles/PopupAddTask.css
+++ b/src/styles/PopupAddTask.css
@@ -10,14 +10,15 @@
 }
 
 .popupAddTask-container{
-    display: block;
+    display: flex;
     width: 100%;
     height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .popupAddTask-body{
     width: 500px;
-    margin: 10% 33.333%;
     background-color: #fff;
     padding: 80px 10px 80px 10px;
     text-align: center;
